fix layout issue

--- a/styles/partials/_minW1400px.scss
+++ b/styles/partials/_minW1400px.scss
@@ -121,7 +121,7 @@
 
   .rightContainer {
     position: relative;
-    bottom: -55px;
+    bottom: -100px;
     width: 40%;
 
     .flexParent {
