--- a/styles/style.css
+++ b/styles/style.css
@@ -1120,7 +1120,7 @@ footer {
       text-align: right; }
   .rightContainer {
     position: relative;
-    bottom: -55px;
+    bottom: -100px;
     width: 40%; }
     .rightContainer .flexParent {
       -webkit-box-orient: vertical;
